# ai-reception

./: .cta.json  .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.production  PARALLEL_PDF_PROCESSING.md  PERFORMANCE_OPTIMIZATIONS.md  PRESENTATION_SPEECH.md  README.md  alembic.ini  docker-compose.yml  index.html  nginx.conf  package.json  pnpm-lock.yaml  start.ps1  vite.config.ts
api/: Dockerfile  Dockerfile.dev  __init__.py  alembic.ini  auth.py  config.py  database.py  docker-compose.yml  document_service.py  main.dart  manage.py  models.py  nginx.conf  pyproject.toml  requirements.txt  review.py  review_service.py  security.py  server.py  test_parallel_pdf.py
api/migrations/: __init__.py  env.py
api/migrations/versions/: 7e19e41c2e1f_init.py
docs/: hitl-reviewer-plan.md
public/: manifest.json
src/: main.tsx  styles.css
src/components/: AIReception.tsx  Header.tsx
src/components/ui/: sonner.tsx
src/routes/: __root.tsx
web/: .cta.json  .oxlintrc.json  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: manifest.json
web/src/: main.tsx  routeTree.gen.ts  styles.css
web/src/components/: AIReception.tsx  Navbar.tsx  login-03.tsx
web/src/components/kibo-ui/dropzone/: index.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  sonner.tsx
web/src/contexts/: AuthContext.tsx
web/src/lib/: auth.ts  review.ts  utils.ts
web/src/routes/: __root.tsx  index.tsx  login.tsx  review.tsx
